--- a/media.css
+++ b/media.css
@@ -93,4 +93,45 @@
     .sm-1{
         width: 100%;
     }
+    .hide1{
+        display: none;
+    }
+    .sm-75{
+        width: 75%;
+    }
+}
+
+
+@media(max-width:767px) {
+    .lg-5{
+        width: 20%;
+    }
+    .lg-4{
+        width: 25%;
+    }
+    .lg-3{
+        width: 33.33%;
+    }
+    .lg-2{
+        width: 50%;
+    }
+    .lg-1{
+        width: 100%;
+    }
+    .mb-0{
+        margin-bottom: 0px;
+    }
+    .mt-0{
+        margin-top: 0px;
+    }
+    .pb-10{
+        padding-bottom: 10px;
+    }
+    .p-0{
+        padding: 0px;
+    }
+    .f1{
+        font-size: 36px;
+    }
+
 }
