--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     margin: 0;
 }
+*::before{
+    box-sizing: border-box;
+}
+*::after{
+    box-sizing: border-box;
+}
 
 .container-fluid{
     width: 100%;
@@ -139,6 +145,9 @@
 .h-112{
     height: 112px;
 }
+.h-8{
+    height: 800px;
+}
 
 
 .w-1{
@@ -181,7 +190,12 @@
     width: 350px;
 }
 
-
+.p{
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-bottom: 20px;
+    padding-right: 80px;
+}
 .p-10{
     padding: 10px;
 }
@@ -222,6 +236,9 @@
 }
 .p-6{
     padding: 48px 24px;
+}
+.p-7{
+    padding: 48px 12px;
 }
 
 
@@ -416,20 +433,22 @@
     height: 100px;
     position: absolute;
     z-index: 2;
-    top: 280px;
-    left: 0px;
-    transform: rotate(25deg);
+    top: 282px;
+    left: 14px;
+    transform: rotate(31deg);
     background:#111;
+    /* border: 1px solid red; */
 }
 .box3{
     width: 20%;
     height: 100px;
     position: absolute;
     z-index: 2;
-    top: 280px;
-    right: 0px;
-    transform: rotate(-25deg);
+    top: 282px;
+    right: 14px;
+    transform: rotate(-31deg);
     background:#111;
+    /* border: 1px solid red; */
 }
 .box img{
     z-index: 2;
