--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
 .box{
     width: 100%;
     height: 100%;
-    background-color: bisque;
+    /* background-color: bisque; */
 }
 .border{
     border: 1px solid red;
@@ -608,4 +608,14 @@
 .box0:hover{
     transform: translate3d(0, -5%, 0);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.box11{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    /* transition: 5s; */
+}
+.box:hover .box11{
+    /* left: 200px; */
 }
