--- a/style.css
+++ b/style.css
@@ -225,6 +225,9 @@
 .p-3{
     padding: 16px 24px;
 }
+.p-8{
+    padding: 16px 0px;
+}
 .p-4{
     padding: 16px 48px;
 }
@@ -263,8 +266,14 @@
 .mt-24{
     margin-top: 24px;
 }
+.mb-24{
+    margin-bottom: 24px;
+}
 .mr-5{
     margin-right: 5px;
+}
+.ml-10{
+    margin-left: 10px;
 }
 .mr-15{
     margin-right: 15px;
@@ -277,6 +286,9 @@
 }
 .ml-20{
     margin-left: 20px;
+}
+.mb-4{
+    margin-bottom: 4px;
 }
 
 
@@ -312,6 +324,9 @@
 }
 .fluid6{
     color: #dc3545 !important;
+}
+.fluid7{
+    color: #6c757d 
 }
 .background1{
     background-color: #F5F6F6;
@@ -614,8 +629,51 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    /* transition: 5s; */
+    transition: .2s;
 }
 .box:hover .box11{
-    /* left: 200px; */
+    left: 200px;
+}
+
+.ime2{
+    background-image: url(Images/footer/carousel-2.jpg);
+    width: 100%;
+    background-size: cover;
+}
+
+.qute{
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    padding: 1rem;
+    /* border: 1px solid red; */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: 247px;
+    left: 0px;
+    background-color: #fdf001;
+}
+
+.slick-prev{
+    background-color: #fdf001 !important;
+    width: 60px !important;
+    height: 30px !important;
+    border-radius: 20px 0px 0px 20px;
+}
+.slick-prev:before{
+    color: #111 !important;
+    font-size: 22px !important;
+}
+.slick-next{
+    background-color: #fdf001 !important;
+    width: 60px !important;
+    height: 30px !important;
+    border-radius: 0px 20px 20px 0px;
+}
+.slick-next:before{
+    color: #111 !important;
+    font-size: 22px !important;
 }
