--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
     justify-content: center;
     align-content: center;
 }
+.middle3{
+    justify-content: center;
+}
 .middle1{
     display: flex;
     justify-items: flex-start;
@@ -54,6 +57,10 @@
     width: 100%;
     height: 100%;
     /* background-color: bisque; */
+}
+.width{
+    width: 100%;
+    height: 100%;
 }
 .border{
     border: 1px solid red;
@@ -426,6 +433,9 @@
 .font13{
     font-size: 1rem;
 }
+.font14{
+    font-size: 74px;
+}
 
 .open{
     font-family: "Open", sans-serif;
@@ -754,4 +764,57 @@
 
 .text-right{
     text-align: right;
+}
+
+
+.slick .slick-next{
+    background-color: #fdf001 !important;
+    width: 100px !important;
+    height: 50px !important;
+    border-radius: 0px 20px 20px 0px;
+    right: 0px;
+}
+.slick .slick-prev{
+    background-color: #fdf001 !important;
+    width: 100px !important;
+    height: 50px !important;
+    border-radius: 20px 0px 0px 20px;
+    left: 0px;
+    z-index: 3;
+}
+
+
+.slick .slick-next:before{
+    color: white !important;
+    font-size: 22px !important;
+}
+.slick .slick-prev:before{
+    color: white !important;
+    font-size: 22px !important;
+}
+
+
+.sel1{
+    position: absolute;
+    /* border: 1px solid red; */
+    height: 100%;
+    top: 0px;
+    left: 20%;
+    text-align: start;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+.sel2{
+    position: absolute;
+    /* border: 1px solid red; */
+    height: 100%;
+    top: 0px;
+    left: 20%;
+    text-align: start;
+    /* align-items: center; */
+    justify-content: center;
+}
+.color{
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7))
 }
